// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`alarm-column-value-state Renders \`alarm-column-value-state\` with alarm state 1`] = `
<div
  class="layout align-center alarm-column-value-state--badge"
>
  <c-alarm-chip-stub
    badge-value="Events count"
    value="custom-state-val"
  />
  <!---->
</div>
`;

exports[`alarm-column-value-state Renders \`alarm-column-value-state\` with custom propertyKey 1`] = `
<div
  class="layout align-center"
>
  <c-alarm-chip-stub
    value="custom-property-value"
  />
  <!---->
</div>
`;

exports[`alarm-column-value-state Renders \`alarm-column-value-state\` with default props 1`] = `
<div
  class="layout align-center"
>
  <c-alarm-chip-stub />
  <!---->
</div>
`;
